<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff090"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snake"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/snake" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/you_lose"
        android:textColor="#ff0000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_best_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your best score: 5"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your current score: 2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="23sp" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_style"
        android:text="@string/start_new_game"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_style"
        android:text="@string/share_app"
        android:textColor="#fff" />
</LinearLayout>