<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#fff090"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your current score : 20"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/snake" />

    <TextView
        android:id="@+id/tv_current_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="The current speed is: 100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/more_lower_fast"
        android:textSize="11sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_change_speed"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_style"
        android:text="@string/ok"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_resume"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_style"
        android:text="@string/resume"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_main"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_style"
        android:text="@string/main"
        android:textColor="#fff" />
</LinearLayout>